Updates comparison pageto flex between medium and small screens

--- a/Comps.html
+++ b/Comps.html
@@ -50,17 +50,17 @@
                     <hr>
                     <p>Click any plot to get an in-depth analysis</p>
                     <div class="content">
-                        <a class="col-md-6" class="topcolumn" href="Viz3.html">
+                        <a class="col-md-6 col-sm-12" class="topcolumn" href="Viz3.html">
                             <img width="500"src="CloudVsLat.png" alt="Cloudiness vs latitude viz"></img>
                         </a> 
-                        <a class="col-md-6" class="topcolumn" href="Viz4.html">
+                        <a class="col-md-6 col-sm-12" class="topcolumn" href="Viz4.html">
                             <img width="500"src="HumVsLat.png" alt="Humidity vs latitude viz"></img>
                         </a>
-                        <a class="col-md-6" class="bottomcolumn"
+                        <a class="col-md-6 col-sm-12" class="bottomcolumn"
                         href="Viz1.html">
                             <img width="500" src="TempVsLat.png" alt="Temperature vs latitude viz"></img>
                         </a>
-                        <a class="col-md-6" class="bottomcolumn" href="Viz2.html">                   
+                        <a class="col-md-6 col-sm-12" class="bottomcolumn" href="Viz2.html">                   
                             <img width="500" src="WindVsLat.png" alt="Wind vs latitude viz"></img>
                         </a>
                     </div>    
